--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ li a{
 .hero{
         width: 100%;
         height: 100vh;
-        background-image: url(/images/hero-bg.jpg);
+        background-image: url(hero-bg.jpg);
         background-repeat: no-repeat;
         background-size: cover;
 }
